@@ -812,6 +812,8 @@ protected:
 	void AddItemBonuses(const ItemInst *inst, StatBonuses* newbon, bool isAug = false);
 	int  CalcRecommendedLevelBonus(int8 level, uint8 reclevel, int basestat);
 	void CalcEdibleBonuses(StatBonuses* newbon);
+	void CalcAABonuses(StatBonuses* newbon);
+	void ApplyAABonuses(SendAA_Struct* aa_struct, int32 slots, StatBonuses* newbon);
 	void MakeBuffFadePacket(int16 spell_id, int slot_id, bool send_message = true);
 	bool client_data_loaded;
 
