@@ -1,6 +1,7 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 ==10/10/2008
+AndMetal: Added functions to calculate AA bonuses just like item & spell bonuses (not turned on yet)
 Condgar: Fix for Bots wont Attack
 Congdar: Fix low level bots hitting too hard
 Derision: Prevent two instances of possible zone crashes due to null pointers.
